--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -21,3 +19,24 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Optional logs
+*.log
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS-generated files
+Thumbs.db
+ehthumbs.db
+Icon?
+Desktop.ini
+
+# Optional: lock files for other package managers (keep only one)
+# yarn.lock
+# pnpm-lock.yaml
+
+# Keep package-lock.json to ensure consistent installs
